# psycopg2-iam

./: .gitignore  README.md  pyproject.toml
psycopg2_iam/: __init__.py
