[tool.poetry]
name = "psycopg2-iam"
version = "0.1.0"
description = ""
authors = ["Epsy Engineering <engineering@epsyhealth.com>"]
keywords = ["library"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.8"
boto3 = "^1.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
