[tool.poetry]
name = "psycopg2-iam"
version = "0.2.0"
description = ""
authors = ["Epsy Engineering <engineering@epsyhealth.com>"]
keywords = ["library"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.8"
boto3 = "^1.14"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
